--- a/index.html
+++ b/index.html
@@ -405,11 +405,6 @@
                         <p>"제네시스가 독일 노르트하인 베스트팔린 디자인센터가 주관하는 ‘2022 레드 닷 어워드 : 브랜드 & 커뮤니케이션 디자인’에서 최우수상 1개, 본상 3개, 총 4개 디자인상을 수상하였습니다. 제네시스의 전용 전시관 ‘제네시스 수지’가 리테일 디자인 부문에서 ‘레드 닷 어워드 : 최우수상’을 수상했으며, ‘제네시스 스튜디오 안성’과 ‘제네시스 하우스 뉴욕’은 본상 수상, ‘제네시스 GV60 인스토어 캠페인 : Light & Wonder’은 ‘공간 커뮤니케이션’ 부문에서 본상을 수상하였습니다."</p>
                     </div>
                 </div>
-                <div class="Sbutton">                    <ul>
-                        <li><a href="#">view more</a></li>
-                        <li><a href="#">puchase now</a></li>
-                    </ul>
-                </div>
             </section>
         </div>
      </article>
@@ -494,6 +489,8 @@
                         </ul>
                     </div>
                 </div>
+                <p class="prev"><i class="fa-solid fa-caret-left"></i></p>
+                <p class="next"><i class="fa-solid fa-caret-right"></i></p>
             </div>
 
             <!-- info -->
